# onebot-qqguild-extension

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: RFC.md  config.yml
.github/workflows/: release.yml  static.yml
onebot_qqguild_extension/: __init__.py  bot.py  event.py
specs/: index.md
specs/interface/guild/: message-events.md
specs/interface/message/: actions.md
specs/interface/user/: message-events.md
style-guide/: markdown.md
