[tool.poetry]
name = "onebot-qqguild-extension"
version = "0.1.0"
description = ""
authors = ["hemengyang <hmy0119@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "onebot_qqguild_extension" }]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
